[gd_scene load_steps=7 format=2]

[ext_resource path="res://World/WorldMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/Main.gd" type="Script" id=3]
[ext_resource path="res://World/TreeNode.tscn" type="PackedScene" id=4]
[ext_resource path="res://World/WaterNode.tscn" type="PackedScene" id=5]
[ext_resource path="res://AudioScenes/MusicPlayer.tscn" type="PackedScene" id=6]

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="TreeNode" parent="." instance=ExtResource( 4 )]
position = Vector2( 23, 140 )

[node name="TreeNode2" parent="." instance=ExtResource( 4 )]
position = Vector2( 68, 174 )

[node name="TreeNode3" parent="." instance=ExtResource( 4 )]
position = Vector2( 26, 201 )

[node name="TreeNode4" parent="." instance=ExtResource( 4 )]
position = Vector2( 257, 138 )

[node name="TreeNode5" parent="." instance=ExtResource( 4 )]
position = Vector2( 264, 8 )

[node name="TreeNode6" parent="." instance=ExtResource( 4 )]
position = Vector2( 443, 255 )

[node name="TreeNode7" parent="." instance=ExtResource( 4 )]
position = Vector2( 224, 272 )

[node name="WorldMap" parent="." instance=ExtResource( 1 )]
cell_custom_transform = Transform2D( 0, 0, 0, 0, 0, 0 )
tile_data = PoolIntArray( 0, 14, 65536, 1, 14, 131072, 2, 14, 65537, 3, 14, 65537, 4, 14, 65537, 5, 14, 131072, 6, 14, 65536, 7, 14, 65536, 8, 14, 1, 9, 14, 65537, 10, 14, 0, 11, 14, 0, 12, 14, 65536, 13, 14, 131072, 14, 14, 0, 15, 14, 131073, 16, 14, 131073, 17, -1073741812, 3, 18, -1073741812, 3, 19, -1073741812, 5, 20, -1073741812, 2, 21, -1073741812, 3, 22, -1073741812, 0, 23, 14, 1, 24, 14, 1, 25, 14, 65537, 26, 14, 1, 27, 14, 65537, 28, 14, 131072, 29, 14, 65536, 65536, 14, 1, 65537, 14, 65536, 65538, 14, 131073, 65539, 14, 65536, 65540, 14, 131072, 65541, 14, 65537, 65542, 14, 131072, 65543, 14, 0, 65544, 14, 65537, 65545, 14, 1, 65546, 14, 65536, 65547, 14, 1, 65548, 14, 65536, 65549, 14, 131073, 65550, 14, 1, 65551, 14, 131072, 65552, -1073741812, 1, 65553, -1073741812, 1, 65554, -1073741812, 3, 65555, -1073741812, 1, 65556, -1073741812, 4, 65557, -1073741812, 5, 65558, 14, 131073, 65559, 14, 131073, 65560, 14, 0, 65561, 14, 131072, 65562, 14, 131073, 65563, 14, 0, 65564, 14, 65537, 65565, 14, 131072, 131072, 14, 131072, 131073, 14, 65537, 131074, 14, 1, 131075, 14, 131072, 131076, 14, 0, 131077, 14, 131073, 131078, 14, 131073, 131079, 14, 131072, 131080, 14, 0, 131081, 14, 1, 131082, 14, 65536, 131083, 14, 0, 131084, 14, 1, 131085, -1073741810, 0, 131086, -1073741810, 0, 131087, -1073741812, 3, 131088, -1073741812, 5, 131089, -1073741812, 1, 131090, -1073741812, 4, 131091, -1073741812, 1, 131092, -1073741812, 5, 131093, 14, 1, 131094, 14, 1, 131095, 14, 131072, 131096, 14, 65537, 131097, 14, 1, 131098, 14, 131072, 131099, 14, 65536, 131100, 14, 131072, 131101, 14, 131072, 196608, 14, 1, 196609, 14, 131073, 196610, 14, 131072, 196611, 14, 0, 196612, 14, 131073, 196613, 14, 65536, 196614, 14, 131072, 196615, 14, 131073, 196616, 14, 131073, 196617, 14, 131072, 196618, 14, 65537, 196619, 14, 0, 196620, 14, 131072, 196621, -1073741810, 131073, 196622, -1073741812, 5, 196623, -1073741812, 3, 196624, -1073741812, 5, 196625, -1073741812, 1, 196626, -1073741812, 1, 196627, -1073741812, 0, 196628, 14, 65537, 196629, 14, 65537, 196630, 14, 65536, 196631, 14, 131073, 196632, 14, 65536, 196633, 14, 65536, 196634, 14, 131072, 196635, 14, 1, 196636, 14, 65536, 196637, 14, 65537, 262144, 14, 131073, 262145, 14, 1, 262146, 14, 1, 262147, 14, 65536, 262148, 14, 131073, 262149, 14, 131072, 262150, 14, 65537, 262151, 14, 131073, 262152, 14, 0, 262153, 14, 1, 262154, 14, 131072, 262155, 14, 65536, 262156, 14, 65536, 262157, -1073741812, 5, 262158, -1073741812, 5, 262159, -1073741812, 4, 262160, -1073741812, 4, 262161, -1073741812, 2, 262162, -1073741812, 4, 262163, 14, 131073, 262164, 14, 0, 262165, 14, 65536, 262166, 14, 0, 262167, 14, 0, 262168, 14, 131073, 262169, 14, 65536, 262170, 14, 1, 262171, 14, 65536, 262172, 14, 0, 262173, 14, 1, 327680, 14, 131073, 327681, 14, 1, 327682, 14, 1, 327683, 14, 65536, 327684, 14, 0, 327685, 14, 1, 327686, 14, 131073, 327687, 14, 1, 327688, 14, 1, 327689, 14, 65537, 327690, 14, 1, 327691, 14, 0, 327692, -1073741812, 1, 327693, -1073741812, 2, 327694, -1073741812, 5, 327695, -1073741812, 2, 327696, -1073741812, 5, 327697, -1073741812, 5, 327698, 14, 131073, 327699, 14, 1, 327700, 14, 1, 327701, 14, 1, 327702, 14, 0, 327703, 14, 65536, 327704, 14, 0, 327705, 14, 131072, 327706, 14, 0, 327707, 14, 1, 327708, 14, 1, 327709, 14, 65537, 393216, 14, 0, 393217, 14, 131072, 393218, 14, 0, 393219, 14, 65537, 393220, 14, 131073, 393221, 14, 65536, 393222, 14, 131073, 393223, 14, 65536, 393224, 14, 65537, 393225, 14, 65536, 393226, 14, 65537, 393227, -1073741812, 5, 393228, -1073741812, 5, 393229, -1073741812, 4, 393230, -1073741812, 4, 393231, -1073741812, 2, 393232, -1073741812, 4, 393233, 1610612748, 1, 393234, 14, 131073, 393235, 14, 131073, 393236, 14, 0, 393237, 14, 65536, 393238, 14, 0, 393239, 14, 0, 393240, 14, 0, 393241, 14, 0, 393242, 14, 65536, 393243, 14, 131073, 393244, 14, 65537, 393245, 14, 65537, 458752, 14, 131072, 458753, 14, 0, 458754, 14, 65537, 458755, 14, 131072, 458756, 14, 131073, 458757, 14, 65536, 458758, 14, 1, 458759, 14, 65536, 458760, 14, 1, 458761, 14, 131072, 458762, -1073741812, 4, 458763, -1073741812, 3, 458764, -1073741812, 4, 458765, -1073741812, 4, 458766, -1073741812, 1, 458767, -1073741812, 3, 458768, 14, 1, 458769, 14, 131072, 458770, 14, 65537, 458771, 14, 65536, 458772, 14, 65537, 458773, 14, 65537, 458774, 14, 0, 458775, 14, 65536, 458776, 14, 65537, 458777, 14, 65537, 458778, 14, 1, 458779, 14, 131072, 458780, 14, 131072, 458781, 14, 0, 524288, 12, 2, 524289, 12, 3, 524290, 12, 2, 524291, 12, 3, 524292, 12, 2, 524293, 12, 3, 524294, 12, 4, 524295, 12, 5, 524296, 12, 2, 524297, 12, 4, 524298, 12, 5, 524299, 12, 3, 524300, -1073741812, 1, 524301, -1073741812, 1, 524302, 12, 1, 524303, 12, 2, 524304, 12, 1, 524305, 12, 5, 524306, 12, 4, 524307, 12, 1, 524308, 12, 1, 524309, 12, 2, 524310, 12, 2, 524311, 12, 0, 524312, 12, 3, 524313, 12, 2, 524314, 12, 4, 524315, 12, 4, 524316, 12, 0, 524317, 12, 5, 589824, 12, 2, 589825, 12, 5, 589826, 12, 3, 589827, 12, 3, 589828, 12, 1, 589829, 12, 2, 589830, 12, 5, 589831, 12, 3, 589832, 12, 1, 589833, 12, 1, 589834, 12, 2, 589835, 12, 4, 589836, 12, 3, 589837, 12, 4, 589838, 12, 1, 589839, 12, 3, 589840, 12, 1, 589841, 12, 2, 589842, 12, 2, 589843, 12, 2, 589844, 12, 4, 589845, 12, 1, 589846, 27, 0, 589847, 27, 1, 589848, 27, 1, 589849, 27, 1, 589850, 27, 1, 589851, 27, 1, 589852, 27, 2, 589853, 12, 4, 655360, 12, 3, 655361, 12, 5, 655362, 12, 4, 655363, 12, 2, 655364, 12, 1, 655365, 12, 2, 655366, 12, 1, 655367, 12, 3, 655368, 12, 3, 655369, 12, 2, 655370, 12, 1, 655371, 12, 4, 655372, 12, 2, 655373, 12, 4, 655374, 12, 1, 655375, 12, 3, 655376, 12, 4, 655377, 12, 2, 655378, 12, 2, 655379, 12, 3, 655380, 12, 2, 655381, 12, 1, 655382, 27, 65536, 655383, 27, 65537, 655384, 27, 65537, 655385, 27, 65537, 655386, 27, 65537, 655387, 27, 65537, 655388, 27, 65538, 655389, 12, 4, 720896, 12, 2, 720897, 12, 5, 720898, 12, 3, 720899, 12, 4, 720900, 12, 5, 720901, 12, 2, 720902, 12, 4, 720903, 12, 2, 720904, 12, 1, 720905, 12, 2, 720906, 12, 2, 720907, 27, 0, 720908, 27, 1, 720909, 27, 2, 720910, 12, 1, 720911, 12, 4, 720912, 12, 4, 720913, 12, 2, 720914, 12, 4, 720915, 12, 4, 720916, 12, 2, 720917, 12, 2, 720918, 27, 65536, 720919, 27, 65537, 720920, 27, 65537, 720921, 27, 65537, 720922, 27, 65537, 720923, 27, 65537, 720924, 27, 65538, 720925, 12, 4, 786432, 12, 4, 786433, 12, 4, 786434, 12, 4, 786435, 12, 2, 786436, 12, 1, 786437, 12, 5, 786438, 12, 2, 786439, 12, 5, 786440, 12, 4, 786441, 12, 4, 786442, 12, 4, 786443, 27, 65536, 786444, 27, 65537, 786445, 27, 65538, 786446, 12, 0, 786447, 12, 1, 786448, 12, 3, 786449, 12, 2, 786450, 12, 3, 786451, 12, 5, 786452, 12, 4, 786453, 12, 4, 786454, 27, 131072, 786455, 27, 131073, 786456, 27, 131073, 786457, 27, 131073, 786458, 27, 131073, 786459, 27, 131073, 786460, 27, 131074, 786461, 12, 4, 851968, 12, 1, 851969, 12, 5, 851970, 12, 5, 851971, 12, 2, 851972, 12, 5, 851973, 12, 2, 851974, 12, 3, 851975, 12, 3, 851976, 12, 1, 851977, 12, 3, 851978, 12, 3, 851979, 27, 65536, 851980, 27, 65537, 851981, 27, 65538, 851982, 12, 0, 851983, 12, 5, 851984, 12, 5, 851985, 12, 2, 851986, 12, 2, 851987, 12, 4, 851988, 12, 2, 851989, 12, 4, 851990, 12, 2, 851991, 12, 5, 851992, 12, 1, 851993, 12, 2, 851994, 12, 2, 851995, 12, 5, 851996, 12, 1, 851997, 12, 2, 917504, 12, 3, 917505, 12, 5, 917506, 12, 5, 917507, 12, 3, 917508, 12, 3, 917509, 12, 4, 917510, 12, 5, 917511, 12, 2, 917512, 12, 2, 917513, 12, 5, 917514, 12, 5, 917515, 27, 131072, 917516, 27, 131073, 917517, 27, 131074, 917518, 12, 0, 917519, 12, 5, 917520, 12, 3, 917521, 12, 1, 917522, 12, 2, 917523, 12, 4, 917524, 12, 5, 917525, 12, 2, 917526, 12, 4, 917527, 12, 5, 917528, 12, 1, 917529, 12, 4, 917530, 12, 3, 917531, 12, 1, 917532, 12, 3, 917533, 12, 4, 983040, 12, 0, 983041, 27, 0, 983042, 27, 2, 983043, 12, 1, 983044, 12, 5, 983045, 12, 2, 983046, 12, 1, 983047, 12, 3, 983048, 12, 4, 983049, 12, 5, 983050, 12, 2, 983051, 12, 3, 983052, 12, 3, 983053, 12, 1, 983054, 12, 2, 983055, 12, 3, 983056, 12, 3, 983057, 12, 3, 983058, 12, 3, 983059, 12, 2, 983060, 12, 5, 983061, 12, 3, 983062, 12, 3, 983063, 12, 1, 983064, 12, 2, 983065, 12, 4, 983066, 12, 4, 983067, 12, 5, 983068, 12, 1, 983069, 12, 3, 1048576, 12, 0, 1048577, 27, 131072, 1048578, 27, 131074, 1048579, 12, 4, 1048580, 12, 3, 1048581, 12, 2, 1048582, 12, 1, 1048583, 12, 3, 1048584, 12, 5, 1048585, 12, 3, 1048586, 12, 3, 1048587, 12, 5, 1048588, 12, 1, 1048589, 12, 1, 1048590, 12, 5, 1048591, 12, 5, 1048592, 12, 3, 1048593, 12, 2, 1048594, 12, 5, 1048595, 12, 5, 1048596, 12, 3, 1048597, 12, 1, 1048598, 12, 2, 1048599, 12, 2, 1048600, 12, 1, 1048601, 12, 4, 1048602, 12, 1, 1048603, 12, 2, 1048604, 12, 1, 1048605, 12, 4, 1114112, 12, 5, 1114113, 12, 3, 1114114, 12, 5, 1114115, 12, 5, 1114116, 12, 6, 1114117, 12, 0, 1114118, 12, 6, 1114119, 12, 0, 1114120, 12, 6, 1114121, 12, 5, 1114122, 12, 2, 1114123, 12, 5, 1114124, 12, 5, 1114125, 12, 4, 1114126, 12, 3, 1114127, 12, 4, 1114128, 12, 1, 1114129, 12, 2, 1114130, 12, 1, 1114131, 12, 2, 1114132, 12, 5, 1114133, 12, 2, 1114134, 12, 2, 1114135, 12, 5, 1114136, 12, 5, 1114137, 12, 4, 1114138, 12, 0, 1114139, 12, 6, 1114140, 12, 2, 1114141, 12, 4 )

[node name="WorldDecorations" parent="." instance=ExtResource( 1 )]
z_index = -9
cell_custom_transform = Transform2D( 0, 0, 0, 0, 0, 0 )
tile_data = PoolIntArray( 0, 15, 0, 1, -1073741807, 0, 2, -1073741807, 0, 3, -1073741807, 0, 4, -1073741807, 0, 5, -1073741807, 0, 6, -1073741807, 0, 7, -1073741807, 0, 8, -1073741807, 0, 9, -1073741807, 0, 10, -1073741807, 0, 11, -1073741807, 0, 12, -1073741807, 0, 13, -1073741807, 0, 14, -1073741807, 0, 15, 1610612761, 0, 16, -1073741812, 5, 17, -1610612711, 0, 22, -1073741799, 0, 23, -1073741812, 1, 24, 24, 0, 25, -1073741807, 0, 26, -1073741807, 0, 27, -1073741807, 0, 28, -1073741807, 0, 29, -1610612721, 0, 65536, 1610612753, 0, 65551, -1073741799, 0, 65552, -1610612711, 0, 65557, -1073741799, 0, 65558, 24, 0, 65565, 17, 0, 131072, 1610612753, 0, 131086, -1073741799, 0, 131087, -1610612711, 0, 131092, -1073741799, 0, 131093, -1073741812, 0, 131101, 17, 0, 196608, 1610612753, 0, 196621, -1073741799, 0, 196622, -1610612711, 0, 196627, -1073741799, 0, 196628, -1073741812, 1, 196629, -1073741812, 5, 196637, 17, 0, 262144, 1610612753, 0, 262156, -1073741799, 0, 262157, -1610612711, 0, 262162, -1073741799, 0, 262163, -1073741812, 4, 262164, -1073741812, 1, 262165, 24, 0, 262173, 17, 0, 327680, 1610612753, 0, 327691, -1073741799, 0, 327692, -1610612711, 0, 327697, -1073741799, 0, 327698, -1073741812, 2, 327699, -1073741812, 3, 327700, 24, 0, 327709, 17, 0, 393216, 1610612753, 0, 393226, -1073741799, 0, 393227, -1610612711, 0, 393232, -1073741799, 0, 393234, -1073741812, 4, 393235, 24, 0, 393245, 17, 0, 458752, 23, 0, 458753, 19, 0, 458754, 19, 0, 458755, 19, 0, 458756, 19, 0, 458757, 19, 0, 458758, 19, 0, 458759, 19, 0, 458760, 19, 0, 458761, -1073741799, 0, 458762, -1610612711, 0, 458767, -1073741799, 0, 458768, -1073741812, 0, 458769, 24, 0, 458770, 19, 0, 458771, 19, 0, 458772, 19, 0, 458773, 19, 0, 458774, 19, 0, 458775, 19, 0, 458776, 19, 0, 458777, 19, 0, 458778, 19, 0, 458779, 19, 0, 458780, 19, 0, 458781, -1073741801, 0, 524288, 24, 0, 524289, 20, 0, 524290, 20, 0, 524291, 20, 0, 524292, 20, 0, 524293, 20, 0, 524294, 20, 0, 524295, 20, 0, 524296, 20, 0, 524305, 20, 0, 524306, 20, 0, 524307, 20, 0, 524308, 20, 0, 524309, 20, 0, 524310, 20, 0, 524311, 20, 0, 524312, 20, 0, 524313, 20, 0, 524314, 20, 0, 524315, 20, 0, 524316, 20, 0, 524317, -1610612712, 0, 589824, -1073741804, 0, 589853, -1610612716, 0, 655360, -1073741804, 0, 655389, -1610612716, 0, 720896, -1073741804, 0, 720925, -1610612716, 0, 786432, -1073741804, 0, 786461, -1610612716, 0, 851968, -1073741804, 0, 851997, -1610612716, 0, 917504, -1073741804, 0, 917533, -1610612716, 0, 983040, -1073741804, 0, 983069, -1610612716, 0, 1048576, -1073741804, 0, 1048605, -1610612716, 0, 1114112, -1073741800, 0, 1114113, 26, 0, 1114114, 26, 0, 1114115, 26, 0, 1114116, 26, 0, 1114117, 26, 0, 1114118, 26, 0, 1114119, 26, 0, 1114120, 26, 0, 1114121, 26, 0, 1114122, 26, 0, 1114123, 26, 0, 1114124, 26, 0, 1114125, 26, 0, 1114126, 26, 0, 1114127, 26, 0, 1114128, 26, 0, 1114129, 26, 0, 1114130, 26, 0, 1114131, 26, 0, 1114132, 26, 0, 1114133, 26, 0, 1114134, 26, 0, 1114135, 26, 0, 1114136, 26, 0, 1114137, 26, 0, 1114138, 26, 0, 1114139, 26, 0, 1114140, 26, 0, 1114141, 1610612760, 0 )
script = null

[node name="HUD" parent="." instance=ExtResource( 2 )]

[node name="TickTimer" type="Timer" parent="."]
autostart = true

[node name="MusicPlayer" parent="." instance=ExtResource( 6 )]

[node name="Water" type="Node" parent="."]

[node name="WaterNode" parent="Water" instance=ExtResource( 5 )]
position = Vector2( 384, 176 )

[node name="WaterNode5" parent="Water" instance=ExtResource( 5 )]
position = Vector2( 408, 176 )

[node name="WaterNode2" parent="Water" instance=ExtResource( 5 )]
position = Vector2( 432, 176 )

[node name="WaterNode6" parent="Water" instance=ExtResource( 5 )]
position = Vector2( 456, 176 )

[node name="WaterNode3" parent="Water" instance=ExtResource( 5 )]
position = Vector2( 200, 200 )

[node name="WaterNode4" parent="Water" instance=ExtResource( 5 )]
position = Vector2( 200, 216 )

[connection signal="timeout" from="TickTimer" to="." method="_on_TickTimer_timeout"]
